--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -7,4 +7,20 @@ html, body {
 .grid-template {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(auto, 300px);
+}
+
+.img-cell {
+    width: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-cell img {
+    max-width: 100%;
+    max-height: 100%;
+    height: auto;
+    width: auto;
+    display: block;
 }
