add margins to sections

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -10,6 +10,10 @@ html, body {
     grid-template-rows: repeat(auto, 300px);
 }
 
+.section {
+    margin: 5%;
+}
+
 .img-cell {
     width: 400px;
     display: flex;
